Fix clicking links right away when hovering on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -102,6 +102,7 @@ span:hover, .goto-link:hover {
     transform: translate(-50%, -50%);
     opacity: 0;
     transition: opacity 0.3s;
+    pointer-events: none;
 }
 
 .project-card:hover .card-content {
